k8s/twenty/ingress.yaml
# k8s/twenty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twenty
  namespace: twenty
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "SastaSpace Admin - Login Required"
spec:
  ingressClassName: public
  rules:
  - host: crm.sastaspace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twenty-server
            port:
              number: 3000
